fixed my projects overflow in mobile devices

--- a/src/components/tiles/Projects/projects.css
+++ b/src/components/tiles/Projects/projects.css
@@ -212,6 +212,13 @@
             height: 95vh;
         }
     }
+    .project-container .title::after {
+        content: ""; 
+        width: 40%;
+        background: transparent; 
+        border-bottom: 1px dashed rgb(73, 73, 73); 
+        margin: 0.5rem 0.1rem;
+    }
 }
 @media (max-width: 1400px) {
     .project-container>.title {
